[tool.poetry]
name = "tlkio-tui"
version = "0.0.1"
description = ""
authors = ["Andy Pan <andypan@ntuosc.org>"]

[tool.poetry.dependencies]
python = "^3.6"
prompt_toolkit = "^3.0.2"
mypy = "^0.761"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
